<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.sign_in_up.fragments.SignInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@android:color/white">

        <EditText
            android:drawableStart="@drawable/mail_ic"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/mail_text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@android:color/white">

    <EditText
        android:drawableStart="@drawable/pass_ic"
        android:focusedByDefault="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:id="@+id/password_text"
        android:textColorHint="@android:color/darker_gray" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/log_in_btn"
        android:hint="@string/log_in"
        android:textColorHint="@android:color/white"
        />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/forgot_your_password"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="textEnd"/>


</LinearLayout>