<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkMode"
    android:orientation="vertical">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/custom_profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/astronaut"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_profile_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/user_name"
        android:textColor="@color/AccentColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_below="@id/custom_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_profile_sector"
        android:layout_alignParentStart="true"
        android:text="@string/sector"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_user_last_seen"
        android:layout_below="@+id/custom_profile_sector"
        android:layout_alignParentStart="true"
        android:text="@string/last_seen"
        android:visibility="gone"
        android:layout_marginTop="2dp"
        android:textColor="@color/AccentColor"
        android:textSize="14sp"
        />

</RelativeLayout>