<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkMode"
    android:padding="16dp"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.main.sector.task.fragment.AddNewTaskFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_title"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/secondary_text_light" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDarkMode">

            <EditText
                android:id="@+id/task_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_description"
                android:minLines="5"
                android:gravity="top"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/secondary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/checkbox_doc_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/doc_name_newTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/AccentColor"
                    android:text="uploaded document name" />

                <CheckBox
                    android:buttonTint="@color/colorPrimary"
                    android:id="@+id/create_sector_project_checkbox"
                    android:checked="true"
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/assigned_user_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/AccentColor"
                    android:text="@string/create_personal_task_for" />

                <ImageView
                    android:id="@+id/assign_to_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_person_"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/assigned_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="8dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/AccentColor"
                    android:textSize="16sp"
                    android:layout_margin="8dp"
                    android:text="@string/set_task_end_date" />

                <ImageView
                    android:id="@+id/date_picker_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/date_picker_icon"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/assigned_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="8dp"
                    />

            </LinearLayout>



        <Button
            android:id="@+id/create_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/AccentColor"
            android:hint="@string/create_task"
            android:textSize="16sp"
            android:textColorHint="@color/colorPrimaryDarkMode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/task_file_btn_upload"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_attach_file_"
        />

</LinearLayout>