<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkMode"
    tools:context=".ui.main.edit_find.edit.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDarkMode"
        app:titleTextColor="@color/AccentColor"
        tools:ignore="UnknownIdInLayout" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_toolbar"
        android:background="@color/AccentColor" />

    <ScrollView
        android:id="@+id/scrolle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="64dp"
                android:src="@drawable/astronaut"
                app:civ_border_color="@color/AccentColor"
                app:civ_border_width="2dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_toRightOf="@+id/edit_profile_image"
                android:src="@drawable/ic_edit" />


            <TextView
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_profile_image"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_person_"
                android:padding="8dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/AccentColor"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_user_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_warning"
                android:inputType=""
                android:padding="8dp"
                android:text="@string/warning_text"
                android:textAlignment="center"
                android:textColor="#808080"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/position_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/warning"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:text="@string/change_position"
                android:textColor="@color/AccentColor" />

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                android:id="@+id/edit_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/position_text"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/default_circle_indicator_radius">

                <Spinner
                    android:id="@+id/edit_spinner_role"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/Position"
                    android:spinnerMode="dropdown" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/group_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_position"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:text="@string/change_group"
                android:textColor="@color/AccentColor" />

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                android:id="@+id/edit_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_text"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/default_circle_indicator_radius">

                <Spinner
                    android:id="@+id/edit_spinner_group"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/Sector"
                    android:spinnerMode="dropdown" />


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_group"
                android:layout_margin="16dp"
                android:background="@color/AccentColor"
                android:backgroundTint="@color/AccentColor"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDarkMode"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>